--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+      <meta charset="UTF-8">
     <meta name="description" content="Udacity Responsive Images course project" />
     <meta name="author" content="//samdutton.com">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0">
@@ -21,10 +22,15 @@
     <header>
       <div class="logo"><i class="fas fa-bookmark"></i></div>
       <h1>My Responsive Blog</h1>
-      <picture>
-        <source media="(min-width:750px)" srcset="images/still_life-1600_large_2x.jpg 2x, images/still_life.jpg 1x" />
-      <img src="images/still_life.jpg" alt="Still Life">
-    </picture>
+      <figure>
+        <picture>
+
+  
+
+    <img src="images/still_life.jpg" alt="Still Life">
+      </picture>
+      </figure>
+     
     </header><!-- header -->
     <article>
       <h2>My Blog Posts</h2>
@@ -44,7 +50,7 @@
       <p>Edam parmesan smelly cheese. Dolcelatte say cheese cheesy feet lancashire cow boursin stinking bishop brie. Stilton cheese strings say cheese pecorino cheeseburger fromage frais cauliflower cheese manchego. St. agur blue cheese ricotta stinking
         bishop queso camembert de normandie manchego cheese triangles fondue. Gouda.</p>
       <figure>
-        <img src="images_src/cockatoos.jpg" alt="Cockatoos">
+        <img src="images/cockatoos.jpg" alt="Cockatoos">
         <figcaption>Cockatoos</figcaption>
       </figure>
       <p>Babybel cream cheese cheese on toast. Brie fromage swiss cheese and biscuits hard cheese babybel bocconcini brie. Cheesy grin swiss cheese strings paneer lancashire cauliflower cheese cheese on toast caerphilly. Queso queso cheese and wine taleggio
